BAC-44 refactor(product): 태그 연동 수정